[metadata]
name = chr 
author = Matteo Sesia, Yaniv Romano 
author-email = n/a 
summary = Conditional Histogram Regression 
description-file = README
home-page = https://github.com/fcela/chr
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    chr
